--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.17.0",
+    "node-sass": "^4.5.0",
     "open-browser-webpack-plugin": "0.0.2",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^6.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
