--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.2",
     "html-webpack-plugin": "^2.17.0",
     "node-sass": "^4.5.0",
     "open-browser-webpack-plugin": "0.0.2",
@@ -36,6 +38,8 @@
   "dependencies": {
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "sprity": "^1.0.8",
+    "sprity-sass": "^1.0.4"
   }
 }
